--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,20 @@ language: python
 python:
     - "2.7"
 
+env:
+    - DCMTK_VERSION="dcmtk-3.6.1_20150924"
+
+cache:
+    pip: true
+    directories:
+        - $DCMTK_VERSION
+
 install:
     - pip install .
     - pip install -r requirements-dev.txt
+    - ./bin/install_deps.sh
 
 script:
     - pylint --reports=no reaper
     - pep8 --max-line-length=150 --ignore=E402 reaper
+    - ./bin/test.sh
