--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
 
 install:
     - pip install .
-    - pip install -r requirements-dev.txt
+    - pip install -U -r requirements-dev.txt
     - ./bin/install_deps.sh
 
 script:
