--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,17 @@ python:
     - "2.7"
 
 env:
-    - DCMTK_VERSION="dcmtk-3.6.1_20150924"
+    global:
+        - DCMTK_VERSION="dcmtk-3.6.1_20150924"
+        - DCMTK_DB_DIR="dcmtk_dicom_db"
+        - TESTDATA_DIR="testdata"
 
 cache:
     pip: true
     directories:
         - $DCMTK_VERSION
+        - $DCMTK_DB_DIR
+        - $TESTDATA_DIR
 
 install:
     - pip install .
@@ -17,6 +22,6 @@ install:
     - ./bin/install_deps.sh
 
 script:
+    - ./bin/test.sh
     - pylint --reports=no reaper
     - pep8 --max-line-length=150 --ignore=E402 reaper
-    - ./bin/test.sh
