Trigger docker hub builds on travis success

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,7 @@ script:
     - ./test/test.sh
     - pylint --reports=no reaper
     - pep8 --max-line-length=150 --ignore=E402 reaper
+
+after_success:
+# Split out build steps to script to avoid yml parsing issues of the commands.
+- bash ./docker/build-trigger.sh Tag "${TRAVIS_TAG}" "${DOCKERHUB_TRIGGER_URL}"
