Rename testdata folder for CI usage

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     global:
         - DCMTK_VERSION="dcmtk-3.6.1_20150924"
         - DCMTK_DB_DIR="dcmtk_dicom_db"
-        - TESTDATA_DIR="testdata"
+        - TESTDATA_DIR="testdata-ci"
         - ORTHANC_VERSION="Orthanc-1.1.0"
 
 cache:
