--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
     - ./test/install_deps.sh
 
 script:
-    - ./test/lint.sh reaper && ./test/test.sh
+    - ./test/lint.sh && ./test/test.sh
 
 after_success:
     - if [ "$TRAVIS_TAG" ]; then
