--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,38 @@
 sudo: false
 language: python
 python:
-    - "2.7"
+  - "2.7"
 
 env:
-    global:
-        - DCMTK_VERSION="dcmtk-3.6.1_20150924"
-        - DCMTK_DB_DIR="dcmtk_dicom_db"
-        - TESTDATA_DIR="testdata"
-        - ORTHANC_VERSION="Orthanc-1.1.0"
-        - secure: tLyIDfETpHCDRyEqF2ROM8ue+D+fl/IeOdFBY/Mov7zhAHpgBdQQJi+HQ1/RK+G7DDsnM/FIjvCcf4etphmBHK3xs8vDM1oPntYs+3iE2AbTcVGglHYoX1++H76xPt3eXyf1S0frgVg6qYCNmuP0chhDUkYXPydcKvq1ANjfTQU= # BUILD_TRIGGER_URL
+  global:
+    - DOWNLOAD_DIR=.
+    - INSTALL_DIR=$VIRTUAL_ENV
+    - DCMTK_VERSION=dcmtk-3.6.1_20150924
+    - DCMTK_DB_DIR=dcmtk_dicom_db
+    - TESTDATA_DIR=testdata
+    - ORTHANC_VERSION=Orthanc-1.1.0
+    - secure: tLyIDfETpHCDRyEqF2ROM8ue+D+fl/IeOdFBY/Mov7zhAHpgBdQQJi+HQ1/RK+G7DDsnM/FIjvCcf4etphmBHK3xs8vDM1oPntYs+3iE2AbTcVGglHYoX1++H76xPt3eXyf1S0frgVg6qYCNmuP0chhDUkYXPydcKvq1ANjfTQU= # BUILD_TRIGGER_URL
 
 cache:
-    pip: true
-    directories:
-        - $DCMTK_VERSION
-        - $DCMTK_DB_DIR
-        - $TESTDATA_DIR
-        - $ORTHANC_VERSION
-
-addons:
-    apt:
-        packages:
-            - uuid-dev
-
-before_install:
-    - ln -s bin $VIRTUAL_ENV/sbin
+  pip: true
+  directories:
+    - $DCMTK_VERSION
+    - $DCMTK_DB_DIR
+    - $TESTDATA_DIR
+    - $ORTHANC_VERSION
 
 install:
-    - pip install .
-    - pip install -r test/requirements.txt
-    - ./test/install_deps.sh
+  - ./test/bin/setup-tests.sh
 
 script:
-    - ./test/lint.sh && ./test/test.sh
+  - ./test/bin/run-tests.sh
 
 after_success:
-    - if [ "$TRAVIS_TAG" ]; then
-          ./docker/build-trigger.sh Tag "$TRAVIS_TAG" "$BUILD_TRIGGER_URL";
-      fi
-    - if [ "$TRAVIS_EVENT_TYPE" == "push" -a "$TRAVIS_BRANCH" == "master" ]; then
-          ./docker/build-trigger.sh Branch "$TRAVIS_BRANCH" "$BUILD_TRIGGER_URL";
-      fi
+  - |
+    if [ "$TRAVIS_TAG" ]; then
+      ./docker/build-trigger.sh Tag "$TRAVIS_TAG" "$BUILD_TRIGGER_URL";
+    fi
+  - |
+    if [ "$TRAVIS_EVENT_TYPE" == "push" -a "$TRAVIS_BRANCH" == "master" ]; then
+      ./docker/build-trigger.sh Branch "$TRAVIS_BRANCH" "$BUILD_TRIGGER_URL";
+    fi
